# SoftRenderer

./: .gitignore  BlinnPhongShader.cpp  BlinnPhongShader.h  CMakeLists.txt  Camera.cpp  Camera.h  HuiSh19770627  HuiSh19770627.pub  Mat.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderWidget.cpp  RenderWidget.h  RenderWidget.ui  Widget.cpp  Widget.h  Widget.ui  main.cpp
.cmake/api/v1/reply/: cache-v2-3a3b092764df83cd1266.json  cmakeFiles-v1-275446061ffa6019ca9e.json  codemodel-v2-c05a59284bd80742c417.json  index-2025-06-04T13-49-06-0482.json  target-SoftRenderer-Debug-7ba2fdcf6e04cd95d373.json  target-SoftRendererCore-Debug-9ebd89c34a679a75dc62.json  target-SoftRendererCore_autogen-Debug-37c544a489fc424bbfd0.json  target-SoftRendererCore_autogen_timestamp_deps-Debug-8071251abfdae5dfee9c.json  target-SoftRenderer_autogen-Debug-846b2cff52d461f519ce.json  target-SoftRenderer_autogen_timestamp_deps-Debug-16f8c3a1d1b36b4e247a.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
res/models/AdaWong/: AdaWong.mtl
res/models/Alcina_Dimitrescu_1/: Alcina-Dimitrescu.mtl
res/models/Alcina_Dimitrescu_2/: model.mtl
res/models/City/: model.mtl
res/models/Kara/: Kara.mtl
res/models/african_head/: african_head.mtl
res/models/house/: house.mtl
src/: BasicDataStructure.h  CMakeLists.txt  FunctionSIMD.h  HelperFunction.h  SRFrameBuffer.cpp  SRFrameBuffer.h  SRendererDevice.cpp  SRendererDevice.h  Shader.h  Texture.cpp  Texture.h
